Sat Oct 29 12:30:05 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Fix indentation of example code.

Sat Oct 29 10:04:24 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Fix typo in example code.

Fri Oct 28 14:39:09 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Note that commit() was new in 1.1.0.

Fri Oct 14 12:38:45 GMT 2011  Olly Betts <olly@survex.com>

	* common/realtime.h: Use safesysselect.h.

Mon Oct 03 00:53:13 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Incorporate changes from latest upstream
	  version.  I'm failing to follow branch structure upstream to work
	  out which changesets to merge so it's simpler to just compare the
	  latest version with what we currently have.

Sun Oct 02 23:31:52 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Merge http://www.sqlite.org/src/info/d8bab8cf0b:
	  'Added %expect directive, to consider a certain number of conflicts
	  "correct." This has the side effect of changing the process exit
	  code to never overflow.'

Sun Oct 02 23:26:34 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Merge http://www.sqlite.org/src/info/e6cbe1e5ee: 
	  "Added -T option, to specify a template filename on the command
	  line.  The default is still "lempar.c", though."  Not currently
	  useful to us, but trying to minimise differences with upstream
	  lemon.

Sun Oct 02 23:14:32 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Merge http://www.sqlite.org/src/info/e22c090f35:
	  "Another attempt at fixing the table generator in lemon. Again, this
	  does not effect the SQLite grammar."  No change to generated grammar
	  for QueryParser.

Sun Oct 02 22:59:28 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/lemon.c: Merge http://www.sqlite.org/src/info/077a6bee2d:
	  "Fix an issue with lemon generating incorrect grammars. This issue
	  does not effect SQLite."  This means we now get the same tables