@@ -1,3 +1,10 @@
+Sat Oct 29 13:29:37 GMT 2011  Olly Betts <olly@survex.com>
+
+	* api/omenquire.cc,common/omenquireinternal.h,docs/deprecation.rst,
+	  include/xapian/enquire.h,include/xapian/types.h,tests/api_anydb.cc:
+	  Deprecate Xapian::percent and use int instead in the API and our
+	  own code.
+
 Sat Oct 29 12:30:05 GMT 2011  Olly Betts <olly@survex.com>
 
 	* docs/quickstart.rst: Fix indentation of example code.
